2011-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs)
	(debbugs-gnu-current-query): Expand docstring.
	(debbugs-gnu-current-filter): New defvar.
	(debbugs-gnu-calendar-read): New defun.
	(debbugs-gnu-current-severities, debbugs-gnu-current-packages)
	(debbugs-gnu-current-archive): Removed.
	(debbugs-gnu-search): Autoloaded.  Remove arguments.  Extend
	interactive queries.
	(debbugs-gnu): Autoloaded.  Use `debbugs-gnu-current-query'.  Set
	:filter in widgets.
	(debbugs-gnu-get-bugs): Add argument QUERY.  Rewrite.
	(debbugs-gnu-print-entry): Extend client-side filtering.

2011-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-search): Let-bind
	`debbugs-gnu-current-query'.
	(debbugs-gnu): Add attribute :query to the widgets.
	(debbugs-gnu-print-entry): Get query from `debbugs-gnu-current-widget'.
	(debbugs-gnu-guess-current-id): Rename from `debbugs-guess-current-id'.
	(debbugs-gnu-send-control-message): Use it.

2011-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-get-bugs): If
	`debbugs-gnu-current-severities' contains only the pseudo-severity
	"tagged", return just the local tagged bugs.

	* debbugs.texi (top): Add a title page.
	(all): Correct some typos.

2011-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-guess-current-id): New function.
	(debbugs-gnu-send-control-message): Use it.
	(debbugs-gnu-summary-mode): Make sure `gnus-article-copy' is alive.

2011-07-19  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs): New customer
	option.
	(debbugs-gnu-pending): Fix docstring.
	(debbugs-gnu-current-query): New defvar.
	(debbugs-gnu-search): New command.
	(debbugs-gnu): Rename SUPPRESS-DONE to SUPPRESS.  Fix interactive
	query.
	(debbugs-gnu-print-entry): Filter according to
	`debbugs-gnu-default-suppress-bugs' and `debbugs-gnu-current-query'.