@@ -1,3 +1,14 @@
+2011-08-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Debbugs.wsdl (ArrayOfArrayOfAnyType)
+	(ArrayOfArrayOfArrayOfAnyType): New types.
+	(search_estRequest, search_estResponse): New messages.
+	(search_est): New operation.
+
+	* debbugs.el (debbugs-search-est): New defun.
+
+	* debbugs-pkg.el (top): Upgrade package version to 0.2.
+
 2011-07-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs)
